--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: '3'
 services:
+    nginx:
+      container_name: nginx
+      image: nginx
+      volumes:
+        - ./nginx:/etc/nginx/conf.d
+        - ./certs:/etc/letsencrypt/live/techprescient.in
+      ports:
+        - 80:80
+        - 443:443
+      depends_on: 
+        - rasa
+        - action_server
     rasa:
       container_name: "rasa_server"
       build: 
